# spot_mini_mini

./: .gitignore
ros2spot/: README.md
ros2spot/src/mini_interfaces/: CMakeLists.txt  package.xml
ros2spot/src/mini_interfaces/msg/: ContactData.msg
ros2spot/src/mini_interfaces/srv/: CalibServo.srv
ros2spot/src/mini_ros2/: CMakeLists.txt  package.xml
ros2spot/src/mini_ros2/config/: joy_params.yaml  policy_params.yaml  spot_params.yaml
ros2spot/src/mini_ros2/include/mini_ros2/: joint_control.hpp  spot.hpp  teleop.hpp
ros2spot/src/mini_ros2/launch/: controller.launch  spot_calibrate.launch  spot_gazebo.launch  spot_move.launch  spot_real.launch  view_spot.launch
ros2spot/src/mini_ros2/mini_ros2/: sensor_interface  servo_calibration  spot_pybullet_interface  spot_real_interface
ros2spot/src/mini_ros2/src/: joint_control_node.cpp  sensor_interface  servo_calibration  spot_pybullet_interface  spot_real_interface  spot_sm.cpp  teleop_node.cpp
ros2spot/src/mini_ros2/src/mini_ros/: spot.cpp  teleop.cpp
ros2spot/src/mini_ros2/src/mini_ros2/: joint_control.cpp  spot.cpp  teleop.cpp
spot_bullet/src/: env_tester.py
spot_bullet/src/mini_bullet/: minitaur_gym_env.py
spot_bullet/src/old_eval_scripts/: sac_eval.py  td3_eval.py
spot_bullet/src/sac_lib/: normalized_actions.py
spot_bullet/src/td3_lib/: td3.py
spot_real/Control/Teensy/spotmicro_ros2/: spotmicro_ros2.ini
spot_real/Control/Teensy/spotmicro_ros2/lib/SpotServo/: SpotServo.cpp  SpotServo.hpp
spotmicro/: spot_gym_env.py
spotmicro/GymEnvs/: spot_bezier_env.py
